--- a/backend/package.json
+++ b/backend/package.json
@@ -3,26 +3,28 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "nodemon src/index.ts",
+    "dev": "tsup src/index.ts --watch --onSuccess \"node dist/index.js\"",
     "build": "tsup src/index.ts --format cjs --clean",
     "start": "node dist/index.js"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "express": "^4.18.3",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.2.1",
     "ws": "^8.16.0",
     "y-leveldb": "^0.1.2",
     "y-websocket": "^1.5.4"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^20.11.25",
     "@types/ws": "^8.5.10",
-    "nodemon": "^3.1.0",
-    "ts-node": "^10.9.2",
     "tsup": "^8.0.2",
     "typescript": "^5.3.3"
   }
-} 
+}
