--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,8 @@
     "@tiptap/starter-kit": "^2.1.16",
     "@tiptap/vue-3": "^2.1.16",
     "ant-design-vue": "^4.1.2",
+    "axios": "^1.10.0",
+    "marked": "^15.0.12",
     "pinia": "^2.1.7",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0",
@@ -27,6 +29,7 @@
     "yjs": "^13.6.14"
   },
   "devDependencies": {
+    "@types/marked": "^6.0.0",
     "@types/node": "^20.11.25",
     "@vitejs/plugin-vue": "^5.0.4",
     "autoprefixer": "^10.4.17",
