--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vue-tsc && vite build",
+    "build": "vite build",
     "preview": "vite preview",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
   },
@@ -29,6 +29,7 @@
     "yjs": "^13.6.14"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.16",
     "@types/marked": "^6.0.0",
     "@types/node": "^20.11.25",
     "@vitejs/plugin-vue": "^5.0.4",
