更新前端环境配置，优化Vite配置以动态加载API和WebSocket地址，确保在不同环境下的灵活性。同时，修改协同编辑器以使用新的环境变量获取WebSocket地址，提升代码可维护性。

--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,1 @@
-VITE_API_URL=http://114.55.138.4:3001/api
-VITE_WS_URL=ws://114.55.138.4:3001
+# 默认环境配置\n\n# API服务器地址 - 生产环境使用相对路径\nVITE_API_URL=\n\n# WebSocket服务器地址 - 生产环境自动使用当前域名\nVITE_WS_URL=
