--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Get pnpm store directory
         id: pnpm-cache
         run: |
-          echo "::set-output name=pnpm_cache_dir::$(pnpm store path)"
+          echo "pnpm_cache_dir=$(pnpm store path)" >> $GITHUB_OUTPUT
           
       - name: Setup pnpm cache
         uses: actions/cache@v3
@@ -44,23 +44,25 @@ jobs:
       - name: Build backend
         run: pnpm build:backend
         
-      - name: Deploy to server
-        uses: appleboy/scp-action@master
-        with:
-          host: ${{ secrets.SERVER_HOST }}
-          username: ${{ secrets.SERVER_USERNAME }}
-          key: ${{ secrets.SSH_PRIVATE_KEY }}
-          source: "frontend/dist/,backend/dist/,package.json,pnpm-lock.yaml,pnpm-workspace.yaml"
-          target: "${{ secrets.SERVER_DEPLOY_PATH }}"
-          strip_components: 0
+      - name: Debug - Check files to deploy
+        run: |
+          ls -la frontend/dist/
+          ls -la backend/dist/
+          echo "Current directory: $(pwd)"
+        
+      - name: Setup SSH
+        run: |
+          mkdir -p ~/.ssh
+          echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_ed25519
+          chmod 600 ~/.ssh/id_ed25519
+          ssh-keyscan -H ${{ secrets.SERVER_HOST }} >> ~/.ssh/known_hosts
           
+      - name: Deploy files with rsync
+        run: |
+          rsync -avz --delete frontend/dist/ ${{ secrets.SERVER_USERNAME }}@${{ secrets.SERVER_HOST }}:${{ secrets.SERVER_DEPLOY_PATH }}/frontend/dist/
+          rsync -avz --delete backend/dist/ ${{ secrets.SERVER_USERNAME }}@${{ secrets.SERVER_HOST }}:${{ secrets.SERVER_DEPLOY_PATH }}/backend/dist/
+          rsync -avz package.json pnpm-lock.yaml pnpm-workspace.yaml ${{ secrets.SERVER_USERNAME }}@${{ secrets.SERVER_HOST }}:${{ secrets.SERVER_DEPLOY_PATH }}/
+        
       - name: Restart application
-        uses: appleboy/ssh-action@master
-        with:
-          host: ${{ secrets.SERVER_HOST }}
-          username: ${{ secrets.SERVER_USERNAME }}
-          key: ${{ secrets.SSH_PRIVATE_KEY }}
-          script: |
-            cd ${{ secrets.SERVER_DEPLOY_PATH }}
-            pnpm install --prod
-            pm2 reload ecosystem.config.js
+        run: |
+          ssh ${{ secrets.SERVER_USERNAME }}@${{ secrets.SERVER_HOST }} "cd ${{ secrets.SERVER_DEPLOY_PATH }} && pnpm install --prod && pm2 reload ecosystem.config.js"
