重构GitHub Actions工作流，将构建和部署步骤分离，使用tar打包构建产物并上传为构建工件，优化部署过程，增加调试信息以便于排查问题。

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,7 +6,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  build-and-deploy:
+  build:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -44,25 +44,50 @@ jobs:
       - name: Build backend
         run: pnpm build:backend
         
-      - name: Debug - Check files to deploy
+      - name: Create deployment archive
         run: |
-          ls -la frontend/dist/
-          ls -la backend/dist/
-          echo "Current directory: $(pwd)"
-        
-      - name: Setup SSH
-        run: |
-          mkdir -p ~/.ssh
-          echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_ed25519
-          chmod 600 ~/.ssh/id_ed25519
-          ssh-keyscan -H ${{ secrets.SERVER_HOST }} >> ~/.ssh/known_hosts
+          tar -czf deploy.tar.gz frontend/dist backend/dist package.json pnpm-lock.yaml pnpm-workspace.yaml
           
-      - name: Deploy files with rsync
+      - name: Upload build artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: deploy-package
+          path: deploy.tar.gz
+          retention-days: 1
+  
+  deploy:
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+      - name: Download build artifact
+        uses: actions/download-artifact@v3
+        with:
+          name: deploy-package
+          
+      - name: Debug info
         run: |
-          rsync -avz --delete frontend/dist/ ${{ secrets.SERVER_USERNAME }}@${{ secrets.SERVER_HOST }}:${{ secrets.SERVER_DEPLOY_PATH }}/frontend/dist/
-          rsync -avz --delete backend/dist/ ${{ secrets.SERVER_USERNAME }}@${{ secrets.SERVER_HOST }}:${{ secrets.SERVER_DEPLOY_PATH }}/backend/dist/
-          rsync -avz package.json pnpm-lock.yaml pnpm-workspace.yaml ${{ secrets.SERVER_USERNAME }}@${{ secrets.SERVER_HOST }}:${{ secrets.SERVER_DEPLOY_PATH }}/
-        
-      - name: Restart application
-        run: |
-          ssh ${{ secrets.SERVER_USERNAME }}@${{ secrets.SERVER_HOST }} "cd ${{ secrets.SERVER_DEPLOY_PATH }} && pnpm install --prod && pm2 reload ecosystem.config.js"
+          ls -la
+          echo "Current directory: $(pwd)"
+      
+      - name: Deploy to server
+        uses: burnett01/rsync-deployments@5.2.1
+        with:
+          switches: -avzr
+          path: deploy.tar.gz
+          remote_path: ${{ secrets.SERVER_DEPLOY_PATH }}/
+          remote_host: ${{ secrets.SERVER_HOST }}
+          remote_user: ${{ secrets.SERVER_USERNAME }}
+          remote_key: ${{ secrets.SSH_PRIVATE_KEY }}
+          
+      - name: Execute deployment commands
+        uses: appleboy/ssh-action@v0.1.10
+        with:
+          host: ${{ secrets.SERVER_HOST }}
+          username: ${{ secrets.SERVER_USERNAME }}
+          key: ${{ secrets.SSH_PRIVATE_KEY }}
+          script: |
+            cd ${{ secrets.SERVER_DEPLOY_PATH }}
+            tar -xzf deploy.tar.gz
+            rm deploy.tar.gz
+            pnpm install --prod
+            pm2 reload ecosystem.config.js
