--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,7 +6,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  build:
+  build-and-deploy:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -44,50 +44,28 @@ jobs:
       - name: Build backend
         run: pnpm build:backend
         
-      - name: Create deployment archive
+      - name: Debug - Check files
         run: |
-          tar -czf deploy.tar.gz frontend/dist backend/dist package.json pnpm-lock.yaml pnpm-workspace.yaml
+          ls -la frontend/dist/
+          ls -la backend/dist/
           
-      - name: Upload build artifact
-        uses: actions/upload-artifact@v4
+      - name: Deploy to Server
+        uses: easingthemes/ssh-deploy@main
         with:
-          name: deploy-package
-          path: deploy.tar.gz
-          retention-days: 1
-  
-  deploy:
-    needs: build
-    runs-on: ubuntu-latest
-    steps:
-      - name: Download build artifact
-        uses: actions/download-artifact@v4
-        with:
-          name: deploy-package
+          SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
+          ARGS: "-avz --delete"
+          SOURCE: "frontend/dist/ backend/dist/ package.json pnpm-lock.yaml pnpm-workspace.yaml"
+          REMOTE_HOST: ${{ secrets.SERVER_HOST }}
+          REMOTE_USER: ${{ secrets.SERVER_USERNAME }}
+          TARGET: ${{ secrets.SERVER_DEPLOY_PATH }}
           
-      - name: Debug info
-        run: |
-          ls -la
-          echo "Current directory: $(pwd)"
-      
-      - name: Deploy to server
-        uses: burnett01/rsync-deployments@5.2.1
-        with:
-          switches: -avzr
-          path: deploy.tar.gz
-          remote_path: ${{ secrets.SERVER_DEPLOY_PATH }}/
-          remote_host: ${{ secrets.SERVER_HOST }}
-          remote_user: ${{ secrets.SERVER_USERNAME }}
-          remote_key: ${{ secrets.SSH_PRIVATE_KEY }}
-          
-      - name: Execute deployment commands
-        uses: appleboy/ssh-action@v0.1.10
+      - name: Restart application
+        uses: appleboy/ssh-action@v1.0.3
         with:
           host: ${{ secrets.SERVER_HOST }}
           username: ${{ secrets.SERVER_USERNAME }}
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           script: |
             cd ${{ secrets.SERVER_DEPLOY_PATH }}
-            tar -xzf deploy.tar.gz
-            rm deploy.tar.gz
             pnpm install --prod
             pm2 reload ecosystem.config.js
