--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -49,23 +49,37 @@ jobs:
           ls -la frontend/dist/
           ls -la backend/dist/
           
-      - name: Deploy to Server
-        uses: appleboy/scp-action@v0.1.7
-        with:
-          host: ${{ secrets.SERVER_HOST }}
-          username: ${{ secrets.SERVER_USERNAME }}
-          key: ${{ secrets.SSH_PRIVATE_KEY }}
-          source: "frontend/dist/,backend/dist/,package.json,pnpm-lock.yaml,pnpm-workspace.yaml"
-          target: ${{ secrets.SERVER_DEPLOY_PATH }}
-          strip_components: 0
+      - name: Create deployment package
+        run: |
+          tar -czf deploy.tar.gz frontend/dist backend/dist package.json pnpm-lock.yaml pnpm-workspace.yaml
           
-      - name: Restart application
-        uses: appleboy/ssh-action@v1.0.3
-        with:
-          host: ${{ secrets.SERVER_HOST }}
-          username: ${{ secrets.SERVER_USERNAME }}
-          key: ${{ secrets.SSH_PRIVATE_KEY }}
-          script: |
-            cd ${{ secrets.SERVER_DEPLOY_PATH }}
-            pnpm install --prod
-            pm2 reload ecosystem.config.js
+      - name: Setup SSH
+        env:
+          SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
+          SERVER_HOST: ${{ secrets.SERVER_HOST }}
+        run: |
+          mkdir -p ~/.ssh
+          echo "$SSH_PRIVATE_KEY" > ~/.ssh/id_ed25519
+          chmod 600 ~/.ssh/id_ed25519
+          ssh-keyscan -H "$SERVER_HOST" >> ~/.ssh/known_hosts
+          
+      - name: Deploy to Server
+        env:
+          SERVER_HOST: ${{ secrets.SERVER_HOST }}
+          SERVER_USERNAME: ${{ secrets.SERVER_USERNAME }}
+          SERVER_DEPLOY_PATH: ${{ secrets.SERVER_DEPLOY_PATH }}
+        run: |
+          # 显示SSH密钥信息（不显示实际内容）
+          echo "SSH key file exists: $(test -f ~/.ssh/id_ed25519 && echo 'Yes' || echo 'No')"
+          echo "SSH key file permissions: $(ls -la ~/.ssh/id_ed25519)"
+          
+          # 上传部署包
+          scp deploy.tar.gz $SERVER_USERNAME@$SERVER_HOST:/tmp/
+          
+          # 解压并部署
+          ssh $SERVER_USERNAME@$SERVER_HOST "mkdir -p $SERVER_DEPLOY_PATH && \
+            tar -xzf /tmp/deploy.tar.gz -C $SERVER_DEPLOY_PATH && \
+            rm /tmp/deploy.tar.gz && \
+            cd $SERVER_DEPLOY_PATH && \
+            pnpm install --prod && \
+            pm2 reload ecosystem.config.js"
