优化GitHub Actions工作流，重构SSH密钥设置步骤，简化配置过程，提升安全性和可读性。

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -69,15 +69,12 @@ jobs:
         with:
           name: deploy-package
           
-      - name: Install SSH key
-        uses: shimataro/ssh-key-action@v2
-        with:
-          key: ${{ secrets.SSH_PRIVATE_KEY }}
-          known_hosts: ${{ secrets.SERVER_HOST }}
-          if_key_exists: replace
-          
-      - name: Add known hosts
-        run: ssh-keyscan -H ${{ secrets.SERVER_HOST }} >> ~/.ssh/known_hosts
+      - name: Setup SSH key
+        run: |
+          mkdir -p ~/.ssh
+          echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
+          chmod 600 ~/.ssh/id_rsa
+          ssh-keyscan -H ${{ secrets.SERVER_HOST }} >> ~/.ssh/known_hosts
           
       - name: Deploy to Server
         run: |
