更新项目文档，修改README.md以反映Lighthouse CI性能监控的配置步骤，并在package.json中添加预览命令。同时，优化GitHub Actions工作流，新增Lighthouse CI检测步骤以提升性能监控能力。

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -49,6 +49,13 @@ jobs:
           ls -la frontend/dist/
           ls -la backend/dist/
           
+      # 添加 Lighthouse CI 检测
+      - name: Run Lighthouse CI
+        run: |
+          npm install -g @lhci/cli
+          pnpm run preview & # 启动预览服务器，根据你的项目调整
+          lhci autorun --config=./lighthouserc.js
+          
       - name: Create deployment package
         run: |
           tar -czf deploy.tar.gz frontend/dist backend/dist package.json pnpm-lock.yaml pnpm-workspace.yaml
