--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "build:backend": "cd backend && pnpm build",
     "build": "pnpm --recursive run build",
     "start": "cd backend && pnpm start",
-    "pull": "git pull origin main"
+    "pull": "git pull origin main",
+    "preview": "cd frontend && pnpm preview"
   },
   "keywords": [
     "collaborative",
