--- a/frontend/package.json
+++ b/frontend/package.json
@@ -40,6 +40,7 @@
     "less": "^4.2.0",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
+    "terser": "^5.43.1",
     "typescript": "^5.3.3",
     "vite": "^5.1.6",
     "vue-tsc": "^1.8.27"
